--- a/about.html
+++ b/about.html
@@ -1,14 +1,17 @@
 <html>
 <head>
-	 <title>About</title>
+
+<title>About</title>
+<link rel="stylesheet" type=" href="style.css">
+
 </head>
 <body>
-	<nav>
-		<a href="index.html"> index</a>
+	<nav class="navbar">
+		<a href="index.html"> home</a>
 		<a href="about.html"> about</a>
 		<a href="services.html"> services</a>
 	</nav>
-	<h1 style="background-color:skyblue">ABOUT ME</h1>
+	<h1 style="background-color:royalblue">ABOUT ME</h1>
 	<p> i am a student in sironga.I love cooking and listening to music.I also love reading novels and watching movies.I am an introvert and Ilove staying alone away fom people butI also love having so many friends around me.I am a band member in my school and a drama member with my friend. I also love games.</p>
 	<img src="images/angela.jpeg" alt="my abilities" width="250" height="250">
 	<!--About this image-->
@@ -21,6 +24,37 @@
 		<li> I love painting</li>
 		<LI> I love singing</LI>
 	</ol>
+	<div>
+		<h3>FUN FACT</h3>
+		<p> what is fun about myself is I love dares and going out to   to visiting game parks and enjoying my surronding. <br>I love listening to music and dancing for fun. I love documentaries and finding out things.</p>
+		<hr>
+		<div>
+			<h3>SKILLS</h3>
+			<ul>
+				<li>cooking</li>
+				<li>singing</li>
+				<li>dancing</li>
+				<li>painting</li>
+				<li>listening to music</li>
+			</ul>
+			<h3>SUBJECTS</h3>
+			<table style="border: 1px solid black;width: 100%">
+				<tr>
+					<th>ENGLISH</th>
+					<th>MATHEMATICS</th>
+					<th>KISWAHILI</th>
+				</tr>
+				<tr>
+					<td>B+</td>
+					<td>B</td>
+					<td>A-</td>
+				</tr>
+			</table>
+			<div>
+				
+			</div>
+		</div>
+	</div>
 
 	
 </body>
